2003-01-04  Han-Wen Nienhuys  <hanwen@cs.uu.nl>

	* Documentation/user/appendices.itely (scheme): update for new syntax.

	* input/regression/chord-name-styles.ly: new file

	* lily/instrument-name-engraver.cc: create instrument names
	without barline too.  Allows instrument name on ChordNames  

	* scm/new-markup.scm (interpret-markup): allow simple strings as
	markup too.

2003-01-04  Jan Nieuwenhuizen  <janneke@gnu.org>

	* scm/chord-name.scm: Super/raise changes and fixes for Banter.
	(step->markup-accidental): Fix: add accidental.
	(chord::inner-name-american): 
	(chord::inner-name-jazz): Ugly fix from inner-name-banter: do not
	append stray '/' if last superscript addition was 'o'.

	* scm/new-markup.scm (normal-size-sub-markup) 
	(normal-size-super-markup): New function.

	* lily/source-file.cc (Source_file): Add warning for possibly
	intentional but suspicious initialization.

	* scm/chord-name.scm: Small rewrites, layout fixes.  Identify and
	add comments about cut-and-paste programming.

	* flower/rational.cc (lcm): Not used; comment out.

2003-01-04  Han-Wen Nienhuys  <hanwen@cs.uu.nl>

	* lily/new-fingering-engraver.cc (position_scripts): use
	fingerHorizontalDirection to determine fingering horizontal
	directions.
 
	* lily/accidental-engraver.cc (acknowledge_grob): add accidental to
	fingering support.

	* scripts/convert-ly.py	(FatalConversionError.conv): add style
	conversion rule. 

	* scm/chord-name.scm (set-chord-name-style): new function.
	(new-chord-name-brew-molecule): revise to interpret markup only
	(new-chord->markup): cleanuppish rewrite. To be called from the
	new engraver.

	* lily/new-chord-name-engraver.cc: new engraver: call Chord ->
	Markup earlier, during interpreting.

	* input/test/{banter,jazz,american}-chords.ly (scheme): update
	style settings. Rename to chord-names-*.ly

2003-01-03  Jan Nieuwenhuizen  <janneke@gnu.org>

	* scm/chord-name.scm: Painful merge of Amy's patch to old-style